--- a/AbroadAdvisor/Views/Shared/_Layout.cshtml
+++ b/AbroadAdvisor/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
                     <li @if (ViewBag.ActivePage == "dashboard") { <text>class="active"</text> }><a href="@Url.Action("Index", "Home")"><i class="fa fa-dashboard"></i> Dashboard</a></li>
                     <li @if (ViewBag.ActivePage == "students") { <text>class="active"</text> }><a href="@Url.Action("List", "Student")"><i class="fa fa-table"></i> Students</a></li>
                     <li @if (ViewBag.ActivePage == "experiences") { <text>class="active"</text> }><a href="@Url.Action("List", "Experience")"><i class="fa fa-plane"></i> Experiences</a></li>
+                    <li @if (ViewBag.ActivePage == "promos") { <text> class="active" </text>  }><a href="@Url.Action("List", "Promo")"><i class="fa fa-certificate"></i> Promos</a></li>
                     @*<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-plane"></i> Experience <b class="caret"></b></a>
                         <ul class="dropdown-menu">
