--- a/AbroadAdvisor/Views/Student/List.cshtml
+++ b/AbroadAdvisor/Views/Student/List.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Bennett.AbroadAdvisor.Core;
 @using Bennett.AbroadAdvisor.Models;
 
-@model IList<StudentModel>
+@model IList<StudentBaseModel>
 
 @{
     ViewBag.Title = "List";
