Show number of students gathered from promo on list

--- a/AbroadAdvisor/Views/Promo/Entry.cshtml
+++ b/AbroadAdvisor/Views/Promo/Entry.cshtml
@@ -103,7 +103,7 @@
 
                 <div class="form-group">
                     @Html.Label("Code", "Code", new { @class = "sr-only" })
-                    @Html.TextBox("Code", "", new { @class = "form-control", autocomplete = "off" })
+                    @Html.TextBox("Code", "", new { @class = "form-control", autocomplete = "off", autofocus = "autofocus" })
                 </div>
 
                 <button type="submit" class="btn btn-success">Proceed</button>
