--- a/AbroadAdvisor/Views/Student/List.cshtml
+++ b/AbroadAdvisor/Views/Student/List.cshtml
@@ -127,6 +127,19 @@
         </table>
     </div>
 
+    @if (Request.HttpMethod == "POST" && Model.Count > 0)
+    {
+        List<string> emailableStudents = Model
+            .Where(s => !String.IsNullOrEmpty(s.CampusEmail))
+            .Select(s => s.FirstName + "%20" + s.LastName + "%20<" + s.CampusEmail + ">")
+            .ToList();
+
+        if (emailableStudents.Count > 0)
+        {
+            <a href="mailto:@String.Join(";", emailableStudents)">Send email to student list</a>
+        }
+    }
+
     @* Student notes modal inserted here by Bootstrap JS. *@
     <div class="modal fade" id="noteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 }
