--- a/AbroadAdvisor/Views/Student/View.cshtml
+++ b/AbroadAdvisor/Views/Student/View.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Bennett.AbroadAdvisor.Core;
 @using Bennett.AbroadAdvisor.Models;
 
-@model StudentBaseModel
+@model StudentModel
 
 @{
     ViewBag.Title = "View";
