--- a/AbroadAdvisor/Views/Student/Edit.cshtml
+++ b/AbroadAdvisor/Views/Student/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Bennett.AbroadAdvisor.Models;
 
-@model StudentBaseModel
+@model StudentModel
 
 @{
     ViewBag.Title = "Edit";
@@ -266,6 +266,23 @@
                                                 {
                                                     new { Value = true, Text = "Full-time Student" },
                                                     new { Value = false, Text = "Part-time Student" }
+                                                },
+                                                "Value",
+                                                "Text",
+                                                Model), "Please Select", new { @class = "form-control" })
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <div class="form-group">
+                                            @Html.LabelFor(s => s.PhiBetaDeltaMember)
+                                            @Html.DropDownListFor(s => s.PhiBetaDeltaMember, new SelectList(
+                                                new[]
+                                                {
+                                                    new { Value = false, Text = "No" },
+                                                    new { Value = true, Text = "Yes" }
                                                 },
                                                 "Value",
                                                 "Text",
