Fix obsolete cell phone field reference
Removed in a77c1904eaebb5cf881ffb139b3775372c17cef8

--- a/AbroadAdvisor/Views/Student/List.cshtml
+++ b/AbroadAdvisor/Views/Student/List.cshtml
@@ -99,11 +99,11 @@
                         <td>
                             @if (Request.Browser.CanInitiateVoiceCall)
                             {
-                                <a href="tel:@student.CellPhoneNumber">@(Formatter.PhoneNumber(student.CellPhoneNumber))</a>
+                                <a href="tel:@student.PhoneNumber">@(Formatter.PhoneNumber(student.PhoneNumber))</a>
                             }
                             else
                             {
-                                @(Formatter.PhoneNumber(student.CellPhoneNumber))
+                                @(Formatter.PhoneNumber(student.PhoneNumber))
                             }
                         </td>
                         <td>
