--- a/AbroadAdvisor/Views/Promo/Form.cshtml
+++ b/AbroadAdvisor/Views/Promo/Form.cshtml
@@ -63,16 +63,10 @@
                             </div>
 
                             <div class="row">
-                                <div class="col-lg-6">
+                                <div class="col-lg-12">
                                     <div class="form-group">
                                         @Html.LabelFor(s => s.PhoneNumber)
                                         @Html.TextBoxFor(s => s.PhoneNumber, new { @class = "form-control", type = "number" })
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="form-group">
-                                        @Html.LabelFor(s => s.CellPhoneNumber)
-                                        @Html.TextBoxFor(s => s.CellPhoneNumber, new { @class = "form-control", type = "number" })
                                     </div>
                                 </div>
                             </div>
@@ -161,45 +155,6 @@
                                 </div>
                             </div>
 
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <label>When would you like to study abroad?</label>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-lg-5">
-                                    <div class="form-group">
-                                        @Html.DropDownListFor(s => s.StudyAbroadYear, ViewBag.StudyAbroadYears as SelectList, "Please Select", new { @class = "form-control" })
-                                    </div>
-                                </div>
-                                <div class="col-lg-5">
-                                    <div class="form-group">
-                                        @Html.DropDownListFor(s => s.StudyAbroadPeriod, new SelectList(ViewBag.StudyAbroadSemesters, "Id", "Name"), "Please Select", new { @class = "form-control" })
-                                    </div>
-                                </div>
-                                <div class="col-lg-2">
-                                    <div class="form-group" id="studyAbroadRowRemovals">
-                                        <p class="help-block text-right"><a href="" id="studyAbroadDestinations"><i class="fa fa-plus-circle"></i> Add</a></p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="form-group">
-                                        @Html.LabelFor(s => s.CampusEmail)
-                                        @Html.EditorFor(s => s.CampusEmail)
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="form-group">
-                                        @Html.LabelFor(s => s.AlternateEmail)
-                                        @Html.EditorFor(s => s.AlternateEmail)
-                                    </div>
-                                </div>
-                            </div>
-
                         </div>
                     </div>
                 </div>
@@ -208,10 +163,16 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="row">
-                                <div class="col-lg-12">
+                                <div class="col-lg-6">
                                     <div class="form-group">
                                         @Html.LabelFor(s => s.Classification)
                                         @Html.DropDownListFor(s => s.Classification, ViewBag.Classifications as SelectList, "Please Select", new { @class = "form-control" })
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        @Html.LabelFor(s => s.GraduatingYear)
+                                        @Html.DropDownListFor(s => s.GraduatingYear, ViewBag.GraduatingYears as SelectList, "Please Select", new { @class = "form-control" })
                                     </div>
                                 </div>
                             </div>
@@ -241,6 +202,45 @@
                                     <div class="form-group">
                                         @Html.LabelFor(s => s.DateOfBirth)
                                         @Html.EditorFor(s => s.DateOfBirth)
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        @Html.LabelFor(s => s.CampusEmail)
+                                        @Html.EditorFor(s => s.CampusEmail)
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        @Html.LabelFor(s => s.AlternateEmail)
+                                        @Html.EditorFor(s => s.AlternateEmail)
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <label>When would you like to study abroad?</label>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-5">
+                                    <div class="form-group">
+                                        @Html.DropDownListFor(s => s.StudyAbroadYear, ViewBag.StudyAbroadYears as SelectList, "Please Select", new { @class = "form-control" })
+                                    </div>
+                                </div>
+                                <div class="col-lg-5">
+                                    <div class="form-group">
+                                        @Html.DropDownListFor(s => s.StudyAbroadPeriod, new SelectList(ViewBag.StudyAbroadSemesters, "Id", "Name"), "Please Select", new { @class = "form-control" })
+                                    </div>
+                                </div>
+                                <div class="col-lg-2">
+                                    <div class="form-group" id="studyAbroadRowRemovals">
+                                        <p class="help-block text-right"><a href="" id="studyAbroadDestinations"><i class="fa fa-plus-circle"></i> Add</a></p>
                                     </div>
                                 </div>
                             </div>
