--- a/AbroadAdvisor/Views/Student/Add.cshtml
+++ b/AbroadAdvisor/Views/Student/Add.cshtml
@@ -178,16 +178,8 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                    @Html.LabelFor(s => s.PhiBetaDeltaMember)
-                                    @Html.DropDownListFor(s => s.PhiBetaDeltaMember, new SelectList(
-                                        new[]
-                                        {
-                                            new { Value = false, Text = "No" },
-                                            new { Value = true, Text = "Yes" }
-                                        },
-                                        "Value",
-                                        "Text",
-                                        Model), "Please Select", new { @class = "form-control" })
+                                    @Html.LabelFor(s => s.Classification)
+                                    @Html.DropDownListFor(s => s.Classification, ViewBag.Classifications as SelectList, "Please Select", new { @class = "form-control" })
                                 </div>
                             </div>
                             <div class="col-lg-6">
@@ -252,6 +244,22 @@
                                         {
                                             new { Value = true, Text = "Full-time Student" },
                                             new { Value = false, Text = "Part-time Student" }
+                                        },
+                                        "Value",
+                                        "Text",
+                                        Model), "Please Select", new { @class = "form-control" })
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="form-group">
+                                    @Html.LabelFor(s => s.PhiBetaDeltaMember)
+                                    @Html.DropDownListFor(s => s.PhiBetaDeltaMember, new SelectList(
+                                        new[]
+                                        {
+                                            new { Value = false, Text = "No" },
+                                            new { Value = true, Text = "Yes" }
                                         },
                                         "Value",
                                         "Text",
