--- a/AbroadAdvisor/Views/Student/Edit.cshtml
+++ b/AbroadAdvisor/Views/Student/Edit.cshtml
@@ -185,22 +185,14 @@
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group">
-                                            @Html.LabelFor(s => s.GraduatingYear)
-                                            @Html.DropDownListFor(s => s.GraduatingYear, ViewBag.GraduatingYears as SelectList, "Please Select", new { @class = "form-control" })
+                                            @Html.LabelFor(s => s.Classification)
+                                            @Html.DropDownListFor(s => s.Classification, ViewBag.Classifications as SelectList, "Please Select", new { @class = "form-control" })
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group">
-                                            @Html.LabelFor(s => s.PhiBetaDeltaMember)
-                                            @Html.DropDownListFor(s => s.PhiBetaDeltaMember, new SelectList(
-                                                new[]
-                                                {
-                                                    new { Value = false, Text = "No" },
-                                                    new { Value = true, Text = "Yes" }
-                                                },
-                                                "Value",
-                                                "Text",
-                                                Model), "Please Select", new { @class = "form-control" })
+                                            @Html.LabelFor(s => s.GraduatingYear)
+                                            @Html.DropDownListFor(s => s.GraduatingYear, ViewBag.GraduatingYears as SelectList, "Please Select", new { @class = "form-control" })
                                         </div>
                                     </div>
                                 </div>
@@ -274,6 +266,22 @@
                                                 {
                                                     new { Value = true, Text = "Full-time Student" },
                                                     new { Value = false, Text = "Part-time Student" }
+                                                },
+                                                "Value",
+                                                "Text",
+                                                Model), "Please Select", new { @class = "form-control" })
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <div class="form-group">
+                                            @Html.LabelFor(s => s.PhiBetaDeltaMember)
+                                            @Html.DropDownListFor(s => s.PhiBetaDeltaMember, new SelectList(
+                                                new[]
+                                                {
+                                                    new { Value = false, Text = "No" },
+                                                    new { Value = true, Text = "Yes" }
                                                 },
                                                 "Value",
                                                 "Text",
