--- a/AbroadAdvisor/Views/Student/Add.cshtml
+++ b/AbroadAdvisor/Views/Student/Add.cshtml
@@ -57,6 +57,34 @@
                         </div>
 
                         <div class="row">
+                            <div class="col-lg-12">
+                                <div class="form-group">
+                                    @Html.LabelFor(s => s.StreetAddress)
+                                    @Html.TextBoxFor(s => s.StreetAddress, new { @class = "form-control" })
+                                </div>
+                                <div class="form-group reducePadding">
+                                    @Html.TextBoxFor(s => s.StreetAddress2, new { @class = "form-control" })
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="form-group reducePadding">
+                                    @Html.TextBoxFor(s => s.City, new { @class = "form-control", placeholder = "City" })
+                                </div>
+                            </div>
+                            <div class="col-lg-2">
+                                <div class="form-group reducePadding">
+                                    @Html.TextBoxFor(s => s.State, new { @class = "form-control", placeholder = "State" })
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="form-group reducePadding">
+                                    @Html.TextBoxFor(s => s.PostalCode, new { @class = "form-control", placeholder = "Postal Code" })
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     @Html.LabelFor(s => s.Citizenship)
