--- a/AbroadAdvisor/Content/css/AbroadAdvisor.css
+++ b/AbroadAdvisor/Content/css/AbroadAdvisor.css
@@ -1,4 +1,59 @@
-﻿.reducePadding {
+﻿body {
+    margin-top: 50px;
+}
+
+/* Hide for mobile, show later */
+.sidebar {
+    display: none;
+}
+@media (min-width: 768px) {
+    .sidebar {
+        position: fixed;
+        top: 51px;
+        bottom: 0;
+        left: 0;
+        z-index: 1000;
+        display: block;
+        padding: 0 20px 20px 20px;
+        overflow-x: hidden;
+        overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+        background-color: #222222;
+        color: #999999;
+    }
+}
+
+/* Sidebar navigation */
+.nav-sidebar {
+    margin-right: -21px; /* 20px padding + 1px border */
+    margin-bottom: 20px;
+    margin-left: -20px;
+}
+    .nav-sidebar > .active > a,
+    .nav-sidebar > .active > a:hover,
+    .nav-sidebar > .active > a:focus {
+        color: #fff;
+        background-color: #080808;
+    }
+    .nav-sidebar > li a {
+        color: #999;
+    }
+    .nav-sidebar > li a:hover {
+        color: #fff;
+        background-color: #080808;
+    }
+
+.main {
+    padding: 20px;
+}
+
+@media (min-width: 768px) {
+    .main {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+}
+
+.reducePadding {
     margin-top: -10px;
 }
 
