--- a/AbroadAdvisor/Views/Shared/_Layout.cshtml
+++ b/AbroadAdvisor/Views/Shared/_Layout.cshtml
@@ -17,130 +17,69 @@
 
 <!doctype html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="robots" content="noindex,nofollow" />
-    <meta name="viewport" content="width=device-width" />
-    <title>@pageTitle</title>
-    @Styles.Render("~/bundles/css")
-    @RenderSection("HeaderStyle", false)
-</head>
-<body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="robots" content="noindex,nofollow" />
+        <meta name="viewport" content="width=device-width" />
+        <title>@pageTitle</title>
+        @Styles.Render("~/bundles/css")
+        @RenderSection("HeaderStyle", false)
+    </head>
+    <body>
 
-    <div id="wrapper">
-
-        <!-- Sidebar -->
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink(siteTitle, "Index", "Home", null, new { @class = "navbar-brand" })
+        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    @Html.ActionLink(siteTitle, "Index", "Home", null, new { @class = "navbar-brand" })
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right navbar-user">
+                        <li class="dropdown user-dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <i class="fa fa-user"></i>
+                                @user.FirstName @user.LastName
+                                <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="@Url.Action("Profile", "User")"><i class="fa fa-user"></i> Profile</a></li>
+                                <li class="divider"></li>
+                                <li><a href="@Url.Action("Logoff", "User")"><i class="fa fa-power-off"></i> Log Out</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul class="nav navbar-nav side-nav">
-                    <li @if (ViewBag.ActivePage == "dashboard") { <text>class="active"</text> }><a href="@Url.Action("Index", "Home")"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-                    <li @if (ViewBag.ActivePage == "students") { <text>class="active"</text> }><a href="@Url.Action("List", "Student")"><i class="fa fa-table"></i> Students</a></li>
-                    <li @if (ViewBag.ActivePage == "experiences") { <text>class="active"</text> }><a href="@Url.Action("List", "Experience")"><i class="fa fa-plane"></i> Experiences</a></li>
-                    <li @if (ViewBag.ActivePage == "promos") { <text> class="active" </text>  }><a href="@Url.Action("List", "Promo")"><i class="fa fa-certificate"></i> Promos</a></li>
-                    @*<li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-plane"></i> Experience <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Open</a></li>
-                            <li><a href="#">Create</a></li>
-                        </ul>
-                    </li>*@
-                </ul>
-
-                @*<p class="nav navbar-fixed-bottom" style="padding: 3px; color: #818181;">
-                    &copy; @((DateTime.Now).Year)
-                    (v @ViewContext.Controller.GetType().Assembly.GetName().Version)
-                </p>*@
-
-                <ul class="nav navbar-nav navbar-right navbar-user">
-                    @*<li class="dropdown messages-dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> Messages <span class="badge">7</span> <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li class="dropdown-header">7 New Messages</li>
-                            <li class="message-preview">
-                                <a href="#">
-                                    <span class="avatar"><img src="http://placehold.it/50x50"></span>
-                                    <span class="name">John Smith:</span>
-                                    <span class="message">Hey there, I wanted to ask you something...</span>
-                                    <span class="time"><i class="fa fa-clock-o"></i> 4:34 PM</span>
-                                </a>
-                            </li>
-                            <li class="divider"></li>
-                            <li class="message-preview">
-                                <a href="#">
-                                    <span class="avatar"><img src="http://placehold.it/50x50"></span>
-                                    <span class="name">John Smith:</span>
-                                    <span class="message">Hey there, I wanted to ask you something...</span>
-                                    <span class="time"><i class="fa fa-clock-o"></i> 4:34 PM</span>
-                                </a>
-                            </li>
-                            <li class="divider"></li>
-                            <li class="message-preview">
-                                <a href="#">
-                                    <span class="avatar"><img src="http://placehold.it/50x50"></span>
-                                    <span class="name">John Smith:</span>
-                                    <span class="message">Hey there, I wanted to ask you something...</span>
-                                    <span class="time"><i class="fa fa-clock-o"></i> 4:34 PM</span>
-                                </a>
-                            </li>
-                            <li class="divider"></li>
-                            <li><a href="#">View Inbox <span class="badge">7</span></a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown alerts-dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> Alerts <span class="badge">3</span> <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Default <span class="label label-default">Default</span></a></li>
-                            <li><a href="#">Primary <span class="label label-primary">Primary</span></a></li>
-                            <li><a href="#">Success <span class="label label-success">Success</span></a></li>
-                            <li><a href="#">Info <span class="label label-info">Info</span></a></li>
-                            <li><a href="#">Warning <span class="label label-warning">Warning</span></a></li>
-                            <li><a href="#">Danger <span class="label label-danger">Danger</span></a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">View All</a></li>
-                        </ul>
-                    </li>*@
-                    <li class="dropdown user-dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <i class="fa fa-user"></i>
-                            @user.FirstName @user.LastName
-                            <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="@Url.Action("Profile", "User")"><i class="fa fa-user"></i> Profile</a></li>
-                            @*<li><a href="#"><i class="fa fa-envelope"></i> Inbox <span class="badge">7</span></a></li>*@
-                            @*<li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>*@
-                            <li class="divider"></li>
-                            <li><a href="@Url.Action("Logoff", "User")"><i class="fa fa-power-off"></i> Log Out</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </nav>
-
-        <div id="page-wrapper">
-            @RenderSection("Body", true)
         </div>
-    </div>
 
-    @Scripts.Render("~/bundles/js")
-    @RenderSection("FooterScript", false)
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-3 col-md-2 sidebar">
+                    <ul class="nav nav-sidebar">
+                        <li @if (ViewBag.ActivePage == "dashboard") { <text> class="active" </text>    }><a href="@Url.Action("Index", "Home")"><i class="fa fa-dashboard"></i> Dashboard</a></li>
+                        <li @if (ViewBag.ActivePage == "students") { <text> class="active" </text>    }><a href="@Url.Action("List", "Student")"><i class="fa fa-table"></i> Students</a></li>
+                        <li @if (ViewBag.ActivePage == "experiences") { <text> class="active" </text>    }><a href="@Url.Action("List", "Experience")"><i class="fa fa-plane"></i> Experiences</a></li>
+                        <li @if (ViewBag.ActivePage == "promos") { <text> class="active" </text>     }><a href="@Url.Action("List", "Promo")"><i class="fa fa-certificate"></i> Promos</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+                    @RenderSection("Body", true)
+                </div>
+            </div>
+        </div>
 
-    <script>
-        $(function () {
-            Bennett.AbroadAdvisor.initPinger('@Url.Action("Ping", "Home")');
-        });
-    </script>
-</body>
+        @Scripts.Render("~/bundles/js")
+        @RenderSection("FooterScript", false)
+
+        <script>
+            $(function () {
+                Bennett.AbroadAdvisor.initPinger('@Url.Action("Ping", "Home")');
+            });
+        </script>
+    </body>
 </html>
