Debug, staging, and production environments
Debug (Web.config) is used in local development and expects a local
database. Staging (Web.Staging.config) is used from the staging web
server using the staging database. Production (Web.Release.config) is
the production version of everything.

--- a/AbroadAdvisor/Views/Shared/_Layout.cshtml
+++ b/AbroadAdvisor/Views/Shared/_Layout.cshtml
@@ -7,9 +7,9 @@
     string pageTitle = siteTitle;
     bool developmentEnvironment = DeploymentEnvironment.IsDevelopment;
     
-    if (developmentEnvironment)
+    if (!DeploymentEnvironment.IsProduction)
     {
-        pageTitle += " (Debug)";
+        pageTitle += String.Format(" ({0})", DeploymentEnvironment.Enviroment);
     }
     
     UserModel user = Session["User"] as UserModel;
