--- a/AbroadAdvisor/Views/Shared/_PromoLayout.cshtml
+++ b/AbroadAdvisor/Views/Shared/_PromoLayout.cshtml
@@ -6,9 +6,9 @@
     string pageTitle = siteTitle;
     bool developmentEnvironment = DeploymentEnvironment.IsDevelopment;
 
-    if (developmentEnvironment)
+    if (!DeploymentEnvironment.IsProduction)
     {
-        pageTitle += " (Debug)";
+        pageTitle += String.Format(" ({0})", DeploymentEnvironment.Enviroment);
     }
 }
 
