--- a/AbroadAdvisor/Views/Student/Add.cshtml
+++ b/AbroadAdvisor/Views/Student/Add.cshtml
@@ -9,7 +9,7 @@
 @section FooterScript {
     <script>
         $(function () {
-            Bennett.AbroadAdvisor.Student.initStudentAddEdit();
+            Bennett.AbroadAdvisor.Student.initStudentAddEdit('@Url.Action("NameCheck")');
             Bennett.AbroadAdvisor.Student.addStudyAbroadRows([], [], []);
         });
     </script>
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    @using (Html.BeginForm(null, null, FormMethod.Post, new { role = "form" }))
+    @using (Html.BeginForm(null, null, FormMethod.Post, new { role = "form", id = "student-form" }))
     {
         @Html.AntiForgeryToken()
         @Html.ValidationSummary()
@@ -39,7 +39,7 @@
                             <div class="col-lg-4">
                                 <div class="form-group has-error">
                                     <label>Full Name</label>
-                                    @Html.TextBoxFor(s => s.FirstName, new { @class = "form-control", placeholder = "First" })
+                                    @Html.TextBoxFor(s => s.FirstName, new { @class = "form-control", placeholder = "First", autofocus = "autofocus" })
                                 </div>
                             </div>
                             <div class="col-lg-4">
@@ -54,6 +54,7 @@
                                     @Html.TextBoxFor(s => s.LastName, new { @class = "form-control", placeholder = "Last" })
                                 </div>
                             </div>
+                            <div class="col-lg-12" id="unique-name"></div>
                         </div>
 
                         <div class="row">
