Fix student notes modal dialogs
Broken since 8dfb2475891a2a6fc7300fffb3204bbfd749062c

--- a/AbroadAdvisor/Views/Student/NameCheck.cshtml
+++ b/AbroadAdvisor/Views/Student/NameCheck.cshtml
@@ -18,7 +18,7 @@
 
                 @foreach (StudentModel student in Model)
                 {
-                    <a data-toggle="modal" href="/student/viewinline/@student.Id" class="list-group-item" data-target="#dup">
+                    <a data-toggle="modal" href="@Url.Action("ViewInline", new { id = student.Id })" class="list-group-item" data-target="#dup">
                         <h4 class="list-group-item-heading">@student.FirstName @student.LastName</h4>
                         <p class="list-group-item-text">
                             Created @DateTimeFilter.UtcToLocal(student.Created)
