--- a/AbroadAdvisor/Views/Student/List.cshtml
+++ b/AbroadAdvisor/Views/Student/List.cshtml
@@ -126,7 +126,7 @@
                                 <li>
                                     <a href="@Url.Action("List", "Note", new { studentId = student.Id })"
                                        data-toggle="modal" data-target="#noteModal"
-                                       class="studentlisttooltop studentlistmodel" data-placement="top"
+                                       class="studentlisttooltop studentlistmodel"
                                        title="@noteTooltip"><i class="@noteIcon"></i></a>
                                 </li>
                                 <li>
@@ -155,6 +155,10 @@
         }
     }
 
-    @* Student notes modal inserted here by Bootstrap JS. *@
-    <div class="modal fade" id="noteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
+    <div class="modal fade" id="noteModal" tabindex="-1" role="dialog" aria-labelledby="noteLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+            </div>
+        </div>
+    </div>
 }
