--- a/AbroadAdvisor/Views/Student/View.Partial.cshtml
+++ b/AbroadAdvisor/Views/Student/View.Partial.cshtml
@@ -198,4 +198,9 @@
     </div>
 </div>
 
-<div class="modal fade" id="noteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
+<div class="modal fade" id="noteModal" tabindex="-1" role="dialog" aria-labelledby="noteLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+        </div>
+    </div>
+</div>
