Disable submit button after form is submitted

--- a/AbroadAdvisor/Views/Note/List.cshtml
+++ b/AbroadAdvisor/Views/Note/List.cshtml
@@ -57,5 +57,6 @@
         });
 
         Bennett.AbroadAdvisor.Student.handleNewNote('#newnote', 'textarea#Note', '@user.FirstName', '@user.LastName');
+        Bennett.AbroadAdvisor.singleSubmit();
     });
 </script>
