--- a/AbroadAdvisor/Views/Promo/Add.cshtml
+++ b/AbroadAdvisor/Views/Promo/Add.cshtml
@@ -10,6 +10,7 @@
     <script>
         $(function () {
             Bennett.AbroadAdvisor.Promo.init('@Url.Action("CheckUniqueName")', '#Code', '#codecheckresult');
+            Bennett.AbroadAdvisor.singleSubmit();
         });
     </script>
 }
