--- a/AbroadAdvisor/Views/User/Login.cshtml
+++ b/AbroadAdvisor/Views/User/Login.cshtml
@@ -65,5 +65,10 @@
     </div>
 
     @Scripts.Render("~/bundles/js")
+    <script>
+        $(function () {
+            Bennett.AbroadAdvisor.singleSubmit();
+        });
+    </script>
 </body>
 </html>
