--- a/AbroadAdvisor/Views/User/Profile.cshtml
+++ b/AbroadAdvisor/Views/User/Profile.cshtml
@@ -8,6 +8,14 @@
     ViewBag.Title = "Settings";
 }
 
+@section FooterScript {
+    <script>
+        $(function () {
+            Bennett.AbroadAdvisor.singleSubmit();
+        });
+    </script>
+}
+
 @section Body {
     <div class="row">
         <div class="col-lg-8">
