--- a/AbroadAdvisor/Views/Experience/Add.cshtml
+++ b/AbroadAdvisor/Views/Experience/Add.cshtml
@@ -15,6 +15,8 @@
                 numberDisplayed: 1,
                 buttonContainer: '<div class="button-default" />'
             });
+
+            Bennett.AbroadAdvisor.singleSubmit();
         });
     </script>
 }
