--- a/AbroadAdvisor/Views/Promo/Form.cshtml
+++ b/AbroadAdvisor/Views/Promo/Form.cshtml
@@ -18,6 +18,7 @@
     <script>
         $(function () {
             Bennett.AbroadAdvisor.Promo.initForm('@Url.Action("Ping", "Home")');
+            Bennett.AbroadAdvisor.singleSubmit();
         });
     </script>
 }
