--- a/AbroadAdvisor/Views/Student/Add.cshtml
+++ b/AbroadAdvisor/Views/Student/Add.cshtml
@@ -11,6 +11,7 @@
         $(function () {
             Bennett.AbroadAdvisor.Student.initStudentAddEdit('@Url.Action("NameCheck")');
             Bennett.AbroadAdvisor.Student.addStudyAbroadRows([], [], []);
+            Bennett.AbroadAdvisor.singleSubmit();
         });
     </script>
 }
